--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
                                         <div class="uk-navbar-dropdown" uk-drop="mode: click; boundary: !nav; boundary-align: true; pos: bottom-justify;">
                                             <div class="uk-container">
                                                 <div class="" uk-slider>
-                                                    <div class="uk-position-relative tm-country-slider-wrap">
+                                                    <div class="tm-slider-content uk-position-relative">
                                                         <div class="uk-slider-container">
                                                             <ul class="uk-slider-items uk-child-width-1-1">
                                                                 <li>
