--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,35 @@
                                 <a class="uk-navbar-item uk-logo" href="/">
                                     <img src="images/logo_tourweek.png" alt="">
                                 </a>
-                                <a href="#offcanvas-overlay" class="uk-navbar-toggle" uk-navbar-toggle-icon
-                                   uk-toggle></a>
+
+                                <!--<a href="#offcanvas-overlay" class="uk-navbar-toggle" uk-navbar-toggle-icon
+                                   uk-toggle></a>-->
+                                <ul class="uk-navbar-nav">
+                                    <li>
+                                        <a href="#" class="uk-navbar-toggle" uk-navbar-toggle-icon></a>
+                                        <div class="uk-navbar-dropdown" uk-drop="mode: click; boundary: !nav; boundary-align: true; pos: bottom-justify;">
+                                            <div class="uk-container">
+                                                <ul class="uk-nav uk-navbar-dropdown-nav uk-column-1-4">
+                                                    <li><a href="#">Попутчики</a></li>
+                                                    <li><a href="#">Блоги</a></li>
+                                                    <li><a href="#">Страны</a></li>
+                                                    <li><a href="#">Города</a></li>
+                                                    <li><a href="#">Достопримечательности</a></li>
+                                                    <li><a href="#">Визы</a></li>
+                                                    <li><a href="#">Фото</a></li>
+                                                    <li><a href="#">Интересное</a></li>
+                                                    <li><a href="#">Новости</a></li>
+                                                    <li><a href="#">Авиакомпании</a></li>
+                                                    <li><a href="#">Турфирмы</a></li>
+                                                    <li><a href="#">Отзывы об авиакомпаниях</a></li>
+                                                    <li><a href="#">Табло аэропортов</a></li>
+                                                    <li><a href="#">Справочник туриста</a></li>
+                                                    <li><a href="#">Блогосфера</a></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ul>
                                 <ul class="uk-navbar-nav">
                                     <li><a href="#">Попутчики</a></li>
                                     <li><a href="#">Блоги</a></li>
