--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 
                 <!--Header-->
                 <header class="uk-position-relative">
-                    <nav class="uk-light" uk-navbar>
+                    <nav class="uk-navbar-container uk-light" uk-navbar>
 
                             <div class="uk-navbar-center">
                                 <a class="uk-navbar-item uk-logo" href="/">
