--- a/src/index.html
+++ b/src/index.html
@@ -245,9 +245,12 @@
                                     </a>
                                 </div>
                                 <div class="uk-width-medium">
+
+                                    <!--Banner-->
                                     <a href="#" class="uk-card">
                                         <img src="images/banner.jpg" alt="" class="uk-width-1-1">
                                     </a>
+
                                 </div>
                             </div>
 
