--- a/src/index.html
+++ b/src/index.html
@@ -836,7 +836,7 @@
             </div>
 
             <!--About project-->
-            <div class="tm-section-about uk-section uk-background-secondary">
+            <div class="uk-section uk-background-secondary uk-text-little">
                 <div class="uk-container uk-text-center">
                     <div class="uk-width-4-5@l uk-margin-auto">
                         <h2>О проекте</h2>
