--- a/src/blogs.html
+++ b/src/blogs.html
@@ -200,18 +200,31 @@
                 </nav>
             </header>
 
-            <div class="uk-section">
+            <div class="uk-section uk-section-small">
                 <div class="uk-container">
+                    <ul class="uk-breadcrumb">
+                        <li><a href="#"><i class="fa fa-bars" aria-hidden="true"></i> Главная</a></li>
+                        <li><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i>Статьи</a></li>
+                        <li><span>В мире</span></li>
+                    </ul>
+
                     <div class="uk-child-width-expand" uk-grid>
 
-                        <!--Interesting in the world-->
+                        <!--Tourist blogs-->
                         <div>
-                            <div uk-grid>
+                            <div class="uk-flex-middle uk-flex-between" uk-grid>
                                 <div>
-                                    <h2>Интересное в мире</h2>
+                                    <h2>Блоги туристов</h2>
                                 </div>
                                 <div>
-                                    <a href="#" class="uk-button uk-button-simple-orange">Смотреть еще</a>
+                                    <div class="uk-flex-middle" uk-grid>
+                                        <div>
+                                            <div class="uk-text-little">Всего постов: <span class="uk-text-bold">563</span></div>
+                                        </div>
+                                        <div>
+                                            <a href="#" class="uk-button uk-button-orange uk-text-uppercase">Добавить пост</a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
 
@@ -251,6 +264,7 @@
                             </div>
                         </div>
 
+                        <!--Aside right-->
                         <aside class="uk-width-medium" uk-margin="margin: uk-margin-medium-top">
 
                             <div>
@@ -374,11 +388,11 @@
                                         <div class="uk-position-relative">Ростуризм призвал туроператоров оповещать туристов о вспышке кори в Румынии</div>
                                     </a>
                                     <a href="#" class="uk-card uk-card-small uk-card-body uk-cover-container uk-flex uk-flex-bottom uk-light">
-                                        <img src="images/interesting_world_1.jpg" alt="" uk-cover>
+                                        <img src="images/interesting_world_2.jpg" alt="" uk-cover>
                                         <div class="uk-position-relative">Ростуризм призвал туроператоров оповещать туристов о вспышке кори в Румынии</div>
                                     </a>
                                     <a href="#" class="uk-card uk-card-small uk-card-body uk-cover-container uk-flex uk-flex-bottom uk-light">
-                                        <img src="images/interesting_world_1.jpg" alt="" uk-cover>
+                                        <img src="images/interesting_world_3.jpg" alt="" uk-cover>
                                         <div class="uk-position-relative">Ростуризм призвал туроператоров оповещать туристов о вспышке кори в Румынии</div>
                                     </a>
                                 </div>
