--- a/src/blogs.html
+++ b/src/blogs.html
@@ -203,8 +203,8 @@
             <div class="uk-section uk-section-small">
                 <div class="uk-container">
                     <ul class="uk-breadcrumb">
-                        <li><a href="#"><i class="fa fa-bars" aria-hidden="true"></i> Главная</a></li>
-                        <li><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i>Статьи</a></li>
+                        <li><a href="#"><i class="fa fa-bars uk-margin-small-right" aria-hidden="true"></i>Главная</a></li>
+                        <li><a href="#">Статьи</a></li>
                         <li><span>В мире</span></li>
                     </ul>
 
