--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
                                     </div>
                                 </li>
                             </ul>
-                            <ul class="uk-navbar-nav">
+                            <ul class="uk-navbar-nav uk-margin-left uk-margin-right">
                                 <li><a href="#">Попутчики</a></li>
                                 <li><a href="#">Блоги</a></li>
                                 <li>
@@ -211,7 +211,7 @@
                         <div class="uk-margin-xlarge-bottom">
                             <a href="" class="uk-button uk-button-large uk-button-blue">Начать поиск</a>
                         </div>
-                        <ul class="uk-iconnav uk-flex-center uk-flex-middle uk-margin-medium-bottom">
+                        <ul class="uk-iconnav tm-social uk-flex-center uk-flex-middle uk-margin-medium-bottom">
                             <li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
                             <li><a href="#"><i class="fa fa-odnoklassniki" aria-hidden="true"></i></a></li>
                             <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
