--- a/src/index.html
+++ b/src/index.html
@@ -291,9 +291,9 @@
                                             <div class="uk-margin-small-bottom">
                                                 <a href="" class="uk-link-text">Кафедральный собор Валетты</a>
                                             </div>
-                                            <div class="uk-flex uk-flex-between uk-text-muted uk-text-small">
+                                            <div class="uk-flex uk-flex-between uk-text-muted uk-text-small uk-grid-small" uk-grid>
                                                 <div>21.03.2017 11:01</div>
-                                                <div class="uk-margin-small-left">
+                                                <div>
                                                     <i class="fa fa-eye" aria-hidden="true"></i>
                                                     <span>21</span>
                                                 </div>
@@ -310,9 +310,9 @@
                                                 <a href="" class="uk-link-text">Секретная пещера тамплиеров в графстве
                                                     Шропшир в Англии</a>
                                             </div>
-                                            <div class="uk-flex uk-flex-between uk-text-muted uk-text-small">
+                                            <div class="uk-flex uk-flex-between uk-text-muted uk-text-small uk-grid-small" uk-grid>
                                                 <div>21.03.2017 11:01</div>
-                                                <div class="uk-margin-small-left">
+                                                <div>
                                                     <i class="fa fa-eye" aria-hidden="true"></i>
                                                     <span>21</span>
                                                 </div>
@@ -328,9 +328,9 @@
                                             <div class="uk-margin-small-bottom">
                                                 <a href="" class="uk-link-text">Кафедральный собор Валетты</a>
                                             </div>
-                                            <div class="uk-flex uk-flex-between uk-text-muted uk-text-small">
+                                            <div class="uk-flex uk-flex-between uk-text-muted uk-text-small uk-grid-small" uk-grid>
                                                 <div>21.03.2017 11:01</div>
-                                                <div class="uk-margin-small-left">
+                                                <div>
                                                     <i class="fa fa-eye" aria-hidden="true"></i>
                                                     <span>21</span>
                                                 </div>
@@ -347,9 +347,9 @@
                                                 <a href="" class="uk-link-text">Россиянин более четырёх лет проживал в
                                                     Таиланде без визы</a>
                                             </div>
-                                            <div class="uk-flex uk-flex-between uk-text-muted uk-text-small">
+                                            <div class="uk-flex uk-flex-between uk-text-muted uk-text-small uk-grid-small" uk-grid>
                                                 <div>21.03.2017 11:01</div>
-                                                <div class="uk-margin-small-left">
+                                                <div>
                                                     <i class="fa fa-eye" aria-hidden="true"></i>
                                                     <span>21</span>
                                                 </div>
@@ -366,9 +366,9 @@
                                                 <a href="" class="uk-link-text">Россиянин более четырёх лет проживал в
                                                     Таиланде без визы</a>
                                             </div>
-                                            <div class="uk-flex uk-flex-between uk-text-muted uk-text-small">
+                                            <div class="uk-flex uk-flex-between uk-text-muted uk-text-small uk-grid-small" uk-grid>
                                                 <div>21.03.2017 11:01</div>
-                                                <div class="uk-margin-small-left">
+                                                <div>
                                                     <i class="fa fa-eye" aria-hidden="true"></i>
                                                     <span>21</span>
                                                 </div>
