--- a/src/index.html
+++ b/src/index.html
@@ -169,9 +169,9 @@
                                                         </ul>
                                                     </div>
 
-                                                    <a class="uk-position-center-left"
+                                                    <a class="uk-position-center-left uk-slidenav-large"
                                                        href="#" uk-slidenav-previous uk-slider-item="previous"></a>
-                                                    <a class="uk-position-center-right"
+                                                    <a class="uk-position-center-right uk-slidenav-large"
                                                        href="#" uk-slidenav-next uk-slider-item="next"></a>
                                                 </div>
 
@@ -192,7 +192,7 @@
 
                         <div class="uk-navbar-right">
                             <div class="uk-navbar-item">
-                                <a href="#" class="uk-button uk-button-small uk-button-orange">Авиабилеты</a>
+                                <a href="#" class="uk-button uk-button-small uk-button-orange uk-text-untransformed">Авиабилеты</a>
                             </div>
                             <ul class="uk-navbar-nav">
                                 <li>
@@ -216,7 +216,7 @@
                             в путешествие
                         </h1>
                         <div class="uk-margin-xlarge-bottom">
-                            <a href="" class="uk-button uk-button-large uk-button-blue">Начать поиск</a>
+                            <a href="" class="uk-button uk-button-large uk-button-blue uk-text-untransformed">Начать поиск</a>
                         </div>
                         <ul class="uk-iconnav tm-social uk-flex-center uk-flex-middle uk-margin-medium-bottom">
                             <li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
@@ -240,7 +240,7 @@
                                     <h2>Интересное в мире</h2>
                                 </div>
                                 <div>
-                                    <a href="#" class="uk-button uk-button-simple-orange">Смотреть еще</a>
+                                    <a href="#" class="uk-button uk-button-small uk-button-simple-orange">Смотреть еще</a>
                                 </div>
                             </div>
 
