--- a/src/index.html
+++ b/src/index.html
@@ -40,10 +40,10 @@
                                                 <li><a href="#">Блоги</a></li>
                                                 <li><a href="#">Страны</a></li>
                                                 <li><a href="#">Города</a></li>
-                                                <li><a href="#">Достопримечательности</a></li>
+                                                <li><a href="#">Интересные места</a></li>
                                                 <li><a href="#">Визы</a></li>
                                                 <li><a href="#">Фото</a></li>
-                                                <li><a href="#">Интересное</a></li>
+                                                <li><a href="#">Статьи</a></li>
                                                 <li><a href="#">Новости</a></li>
                                                 <li><a href="#">Авиакомпании</a></li>
                                                 <li><a href="#">Турфирмы</a></li>
@@ -927,15 +927,23 @@
         <div class="uk-offcanvas-bar">
             <button class="uk-offcanvas-close" type="button" uk-close></button>
 
-            <div class="uk-card uk-flex uk-flex-center uk-margin-large-top">
+            <div class="uk-card uk-flex uk-flex-center">
                 <ul class="uk-nav">
-                    <li>
-                        <a href="index.html" class="uk-active"><span>Главная</span></a>
-                    </li>
-
-                    <li>
-                        <a href="#"><span>Услуги</span></a>
-                    </li>
+                    <li><a href="#">Попутчики</a></li>
+                    <li><a href="#">Блоги</a></li>
+                    <li><a href="#">Страны</a></li>
+                    <li><a href="#">Города</a></li>
+                    <li><a href="#">Интересные места</a></li>
+                    <li><a href="#">Визы</a></li>
+                    <li><a href="#">Фото</a></li>
+                    <li><a href="#">Статьи</a></li>
+                    <li><a href="#">Новости</a></li>
+                    <li><a href="#">Авиакомпании</a></li>
+                    <li><a href="#">Турфирмы</a></li>
+                    <li><a href="#">Отзывы об авиакомпаниях</a></li>
+                    <li><a href="#">Табло аэропортов</a></li>
+                    <li><a href="#">Справочник туриста</a></li>
+                    <li><a href="#">Блогосфера</a></li>
                 </ul>
             </div>
         </div>
