--- a/src/index.html
+++ b/src/index.html
@@ -447,14 +447,14 @@
                             <form action="/" class="uk-padding uk-background-default uk-box-shadow-small">
                                 <div class="uk-child-width-expand@m uk-flex-bottom" uk-grid>
                                     <div>
-                                        <div class="uk-child-width-expand@s" uk-grid>
+                                        <div class="uk-child-width-1-2@s uk-child-width-expand@m" uk-grid>
                                             <div>
                                                 <div class="uk-margin">
                                                     <label class="uk-form-label" for="form-select-search">Я ищу</label>
                                                     <div class="uk-form-controls uk-inline uk-width-1-1">
-                                            <span class="uk-form-icon uk-form-icon-flip">
-                                                <i class="fa fa-angle-down" aria-hidden="true"></i>
-                                            </span>
+                                                        <span class="uk-form-icon uk-form-icon-flip">
+                                                            <i class="fa fa-angle-down" aria-hidden="true"></i>
+                                                        </span>
                                                         <select class="uk-select" id="form-select-search">
                                                             <option>Девушку</option>
                                                             <option>Парня</option>
@@ -463,7 +463,18 @@
                                                 </div>
                                             </div>
 
-                                            <div class="uk-width-large@m">
+                                            <div class="ul-flex-last@m">
+                                                <div class="uk-margin">
+                                                    <label class="uk-form-label" for="form-input-place">Куда</label>
+                                                    <div class="uk-form-controls uk-inline uk-width-1-1">
+                                                        <span class="uk-form-icon uk-form-icon-flip">ESP</span>
+                                                        <input class="uk-input" id="form-input-place" type="text"
+                                                               placeholder="Мадрид">
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="uk-width-1-1 uk-width-large@m">
                                                 <div class="uk-margin">
                                                     <label class="uk-form-label" for="form-input-period">В
                                                         период</label>
@@ -487,17 +498,6 @@
                                                                        placeholder="15.02.2017">
                                                             </div>
                                                         </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-
-                                            <div>
-                                                <div class="uk-margin">
-                                                    <label class="uk-form-label" for="form-input-place">Куда</label>
-                                                    <div class="uk-form-controls uk-inline uk-width-1-1">
-                                                        <span class="uk-form-icon uk-form-icon-flip">ESP</span>
-                                                        <input class="uk-input" id="form-input-place" type="text"
-                                                               placeholder="Мадрид">
                                                     </div>
                                                 </div>
                                             </div>
