--- a/src/index.html
+++ b/src/index.html
@@ -522,7 +522,7 @@
                             </form>
                         </div>
 
-                        <div class="uk-child-width-expand@m" uk-grid>
+                        <div class="uk-child-width-1-5 uk-child-width-expand@m" uk-grid>
                             <div>
                                 <div class="tm-companion-item uk-text-center">
                                     <img src="images/avatar_1.png" alt="" class="uk-border-circle">
@@ -595,7 +595,7 @@
                             </div>
                         </div>
 
-                        <div class="uk-child-width-expand@m" uk-grid>
+                        <div class="uk-child-width-1-5 uk-child-width-expand@m" uk-grid>
                             <div>
                                 <div class="tm-companion-item uk-text-center">
                                     <img src="images/avatar_11.png" alt="" class="uk-border-circle">
