--- a/src/index.html
+++ b/src/index.html
@@ -22,11 +22,14 @@
                 <header class="uk-navbar-container uk-position-relative">
                     <nav class="uk-light" uk-navbar>
                         <div class="uk-navbar-left">
+                            <a href="#offcanvas-overlay" class="uk-navbar-toggle uk-hidden@s" uk-navbar-toggle-icon
+                               uk-toggle></a>
+
                             <a class="uk-navbar-item uk-logo" href="/">
                                 <img src="images/logo_tourweek.png" alt="">
                             </a>
 
-                            <a href="#offcanvas-overlay" class="uk-navbar-toggle uk-hidden@l" uk-navbar-toggle-icon
+                            <a href="#offcanvas-overlay" class="uk-navbar-toggle uk-visible@s uk-hidden@l" uk-navbar-toggle-icon
                                uk-toggle></a>
 
                             <ul class="uk-navbar-nav uk-visible@l">
@@ -191,7 +194,7 @@
                         </div>
 
                         <div class="uk-navbar-right">
-                            <div class="uk-navbar-item">
+                            <div class="uk-navbar-item uk-visible@s">
                                 <a href="#" class="uk-button uk-button-small uk-button-orange uk-text-untransformed">Авиабилеты</a>
                             </div>
                             <ul class="uk-navbar-nav">
@@ -478,7 +481,7 @@
                                                 <div class="uk-margin">
                                                     <label class="uk-form-label" for="form-input-period">В
                                                         период</label>
-                                                    <div class="uk-child-width-1-2 uk-grid-small" uk-grid>
+                                                    <div class="uk-child-width-1-2@s uk-grid-small" uk-grid>
                                                         <div>
                                                             <div class="uk-form-controls uk-inline uk-width-1-1">
                                                     <span class="uk-form-icon">
@@ -506,7 +509,6 @@
 
                                     <div class="uk-width-auto@m">
                                         <div class="uk-margin">
-
                                             <div class="uk-form-controls" uk-grid>
                                                 <div>
                                                     <a href="#" class="uk-button uk-button-simple-orange">С фото</a>
@@ -522,7 +524,7 @@
                             </form>
                         </div>
 
-                        <div class="uk-child-width-1-5 uk-child-width-expand@m" uk-grid>
+                        <div class="uk-child-width-1-2 uk-child-width-1-5@s uk-child-width-expand@m" uk-grid>
                             <div>
                                 <div class="tm-companion-item uk-text-center">
                                     <img src="images/avatar_1.png" alt="" class="uk-border-circle">
@@ -595,7 +597,7 @@
                             </div>
                         </div>
 
-                        <div class="uk-child-width-1-5 uk-child-width-expand@m" uk-grid>
+                        <div class="uk-child-width-1-2 uk-child-width-1-5@s uk-child-width-expand@m" uk-grid>
                             <div>
                                 <div class="tm-companion-item uk-text-center">
                                     <img src="images/avatar_11.png" alt="" class="uk-border-circle">
@@ -910,8 +912,8 @@
         <!--Footer-->
         <footer class="uk-section">
             <div class="uk-container">
-                <div class="uk-child-width-auto uk-grid-large uk-flex-between" uk-grid>
-                    <div class="uk-width-1-1 uk-width-expand@l">
+                <div class="uk-child-width-auto@s uk-grid-large uk-flex-between" uk-grid>
+                    <div class="uk-width-1-1 uk-width-expand@l uk-visible@s">
                         <div class="uk-flex-between" uk-grid>
                             <div>
                                 <ul class="uk-nav uk-nav-default">
@@ -947,7 +949,7 @@
                         </div>
                     </div>
 
-                    <div class="uk-flex-first@l">
+                    <div class="uk-flex-first@l uk-text-center">
                         <a href="/" class="uk-logo">
                             <img src="images/logo_tourweek_footer.png" alt="">
                         </a>
