--- a/src/index.html
+++ b/src/index.html
@@ -969,6 +969,7 @@
         </footer>
     </div>
 
+    <!-- Off-canvas -->
     <div id="offcanvas-overlay" uk-offcanvas="mode: push; overlay: true">
         <div class="uk-offcanvas-bar">
             <button class="uk-offcanvas-close" type="button" uk-close></button>
@@ -994,6 +995,7 @@
             </div>
         </div>
     </div>
+
 </div>
 
 </body>
