--- a/src/blogs.html
+++ b/src/blogs.html
@@ -16,30 +16,35 @@
         <div>
 
             <!--Header-->
-            <header class="uk-position-relative">
-                <nav class="uk-navbar-container uk-light" uk-navbar>
-                    <div class="uk-navbar-center">
+            <header class="uk-navbar-container uk-position-relative">
+                <nav class="uk-light" uk-navbar>
+                    <div class="uk-navbar-left">
+                        <a href="#offcanvas-overlay" class="uk-navbar-toggle uk-hidden@s" uk-navbar-toggle-icon
+                           uk-toggle></a>
+
                         <a class="uk-navbar-item uk-logo" href="/">
                             <img src="images/logo_tourweek.png" alt="">
                         </a>
 
-                        <!--<a href="#offcanvas-overlay" class="uk-navbar-toggle" uk-navbar-toggle-icon
-                           uk-toggle></a>-->
-                        <ul class="uk-navbar-nav">
+                        <a href="#offcanvas-overlay" class="uk-navbar-toggle uk-visible@s uk-hidden@l"
+                           uk-navbar-toggle-icon
+                           uk-toggle></a>
+
+                        <ul class="uk-navbar-nav uk-visible@l">
                             <li>
                                 <a href="#" class="uk-navbar-toggle" uk-navbar-toggle-icon></a>
                                 <div class="uk-navbar-dropdown"
-                                     uk-drop="mode: click; boundary: !nav; boundary-align: true; pos: bottom-justify;">
+                                     uk-drop="mode: click; boundary: !header; boundary-align: true; pos: bottom-justify;">
                                     <div class="uk-container">
                                         <ul class="uk-nav uk-navbar-dropdown-nav uk-column-1-4">
                                             <li><a href="#">Попутчики</a></li>
                                             <li><a href="#">Блоги</a></li>
                                             <li><a href="#">Страны</a></li>
                                             <li><a href="#">Города</a></li>
-                                            <li><a href="#">Достопримечательности</a></li>
+                                            <li><a href="#">Интересные места</a></li>
                                             <li><a href="#">Визы</a></li>
                                             <li><a href="#">Фото</a></li>
-                                            <li><a href="#">Интересное</a></li>
+                                            <li><a href="#">Статьи</a></li>
                                             <li><a href="#">Новости</a></li>
                                             <li><a href="#">Авиакомпании</a></li>
                                             <li><a href="#">Турфирмы</a></li>
@@ -52,13 +57,16 @@
                                 </div>
                             </li>
                         </ul>
+                    </div>
+
+                    <div class="uk-navbar-center uk-visible@l">
                         <ul class="uk-navbar-nav">
                             <li><a href="#">Попутчики</a></li>
                             <li><a href="#">Блоги</a></li>
                             <li>
                                 <a href="#">Страны</a>
                                 <div class="uk-navbar-dropdown"
-                                     uk-drop="mode: click; boundary: !nav; boundary-align: true; pos: bottom-justify;">
+                                     uk-drop="mode: click; boundary: !header; boundary-align: true; pos: bottom-justify;">
                                     <div class="uk-container">
                                         <div class="" uk-slider>
                                             <div class="tm-slider-content uk-position-relative">
@@ -162,9 +170,9 @@
                                                     </ul>
                                                 </div>
 
-                                                <a class="uk-position-center-left"
+                                                <a class="uk-position-center-left uk-slidenav-large"
                                                    href="#" uk-slidenav-previous uk-slider-item="previous"></a>
-                                                <a class="uk-position-center-right"
+                                                <a class="uk-position-center-right uk-slidenav-large"
                                                    href="#" uk-slidenav-next uk-slider-item="next"></a>
                                             </div>
 
@@ -181,8 +189,11 @@
                             <li><a href="#">Статьи</a></li>
                             <li><a href="#">Новости</a></li>
                         </ul>
-                        <div class="uk-navbar-item">
-                            <a href="#" class="uk-button uk-button-small uk-button-orange">Авиабилеты</a>
+                    </div>
+
+                    <div class="uk-navbar-right">
+                        <div class="uk-navbar-item uk-visible@s">
+                            <a href="#" class="uk-button uk-button-small uk-button-orange uk-text-untransformed">Авиабилеты</a>
                         </div>
                         <ul class="uk-navbar-nav">
                             <li>
@@ -202,6 +213,8 @@
 
             <div class="uk-section uk-section-small">
                 <div class="uk-container">
+
+                    <!-- Breadcrumb -->
                     <ul class="uk-breadcrumb">
                         <li><a href="#"><i class="fa fa-bars uk-margin-small-right" aria-hidden="true"></i>Главная</a></li>
                         <li><a href="#">Статьи</a></li>
@@ -927,14 +940,8 @@
         <!--Footer-->
         <footer class="uk-section">
             <div class="uk-container">
-                <div class="uk-child-width-auto uk-grid-large" uk-grid>
-                    <div>
-                        <a href="/" class="uk-logo">
-                            <img src="images/logo_tourweek_footer.png" alt="">
-                        </a>
-                    </div>
-
-                    <div class="uk-width-expand">
+                <div class="uk-child-width-auto@s uk-grid-large uk-flex-between" uk-grid>
+                    <div class="uk-width-1-1 uk-width-expand@l uk-visible@s">
                         <div class="uk-flex-between" uk-grid>
                             <div>
                                 <ul class="uk-nav uk-nav-default">
@@ -953,9 +960,9 @@
                             </div>
                             <div>
                                 <ul class="uk-nav uk-nav-default">
-                                    <li><a href="#">Достопримечательности</a></li>
+                                    <li><a href="#">Интересные места</a></li>
                                     <li><a href="#">Фото</a></li>
-                                    <li><a href="#">Интересное</a></li>
+                                    <li><a href="#">Статьи</a></li>
                                     <li><a href="#">Новости</a></li>
                                 </ul>
                             </div>
@@ -970,8 +977,14 @@
                         </div>
                     </div>
 
+                    <div class="uk-flex-first@l uk-text-center">
+                        <a href="/" class="uk-logo">
+                            <img src="images/logo_tourweek_footer.png" alt="">
+                        </a>
+                    </div>
+
                     <div>
-                        <ul class="uk-iconnav uk-flex-center uk-flex-middle">
+                        <ul class="tm-social uk-iconnav uk-flex-center uk-flex-middle">
                             <li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
                             <li><a href="#"><i class="fa fa-odnoklassniki" aria-hidden="true"></i></a></li>
                             <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
@@ -984,23 +997,33 @@
         </footer>
     </div>
 
+    <!-- Off-canvas -->
     <div id="offcanvas-overlay" uk-offcanvas="mode: push; overlay: true">
         <div class="uk-offcanvas-bar">
             <button class="uk-offcanvas-close" type="button" uk-close></button>
 
-            <div class="uk-card uk-flex uk-flex-center uk-margin-large-top">
+            <div class="uk-card uk-flex uk-flex-center">
                 <ul class="uk-nav">
-                    <li>
-                        <a href="index.html" class="uk-active"><span>Главная</span></a>
-                    </li>
-
-                    <li>
-                        <a href="#"><span>Услуги</span></a>
-                    </li>
+                    <li><a href="#">Попутчики</a></li>
+                    <li><a href="#">Блоги</a></li>
+                    <li><a href="#">Страны</a></li>
+                    <li><a href="#">Города</a></li>
+                    <li><a href="#">Интересные места</a></li>
+                    <li><a href="#">Визы</a></li>
+                    <li><a href="#">Фото</a></li>
+                    <li><a href="#">Статьи</a></li>
+                    <li><a href="#">Новости</a></li>
+                    <li><a href="#">Авиакомпании</a></li>
+                    <li><a href="#">Турфирмы</a></li>
+                    <li><a href="#">Отзывы об авиакомпаниях</a></li>
+                    <li><a href="#">Табло аэропортов</a></li>
+                    <li><a href="#">Справочник туриста</a></li>
+                    <li><a href="#">Блогосфера</a></li>
                 </ul>
             </div>
         </div>
     </div>
+
 </div>
 
 </body>
