blogs html adaptive, index adaptive fixes

--- a/src/index.html
+++ b/src/index.html
@@ -289,9 +289,7 @@
 
                         <!-- Aside right (main page) -->
                         <aside class="uk-width-medium@m uk-width-large@l">
-
-                            <div class="uk-child-width-expand@s uk-child-width-1-1@m uk-grid-medium" uk-grid>
-
+                            <div class="uk-child-width-1-1  uk-grid-medium" uk-grid>
                                 <div class="uk-width-auto@s uk-width-1-1@m uk-hidden@m">
 
                                     <!-- Banner -->
@@ -302,7 +300,7 @@
                                 </div>
 
 
-                                <div>
+                                <div class="uk-width-expand@s  uk-width-1-1@m">
 
                                     <!--News list-->
                                     <div class="tm-news-small">
@@ -426,7 +424,6 @@
                                 </div>
 
                             </div>
-
                         </aside>
 
                     </div>
